# svg2gcode

./: HOWTOBUILD.md  README.md  pyproject.toml  svg2gcode.py
svg2gcode/: README.md  __init__.py  __main__.py
svg2gcode/svg_to_gcode/: __init__.py  css_color.py  formulas.py
svg2gcode/svg_to_gcode/compiler/: __init__.py  _compiler.py
svg2gcode/svg_to_gcode/compiler/interfaces/: __init__.py  _abstract_interface.py  _fan_controlled_gcode.py  _gcode.py
svg2gcode/svg_to_gcode/geometry/: __init__.py  _abstract_chain.py  _abstract_curve.py  _circular_arc.py  _cubic_bazier.py  _elliptical_arc.py  _line.py  _line_segment_chain.py  _matrix.py  _quadratic_bazier.py  _raster_image.py  _smooth_arc_chain.py  _vector.py
svg2gcode/svg_to_gcode/svg_parser/: __init__.py  _parser_methods.py  _path.py  _transformation.py  debug_methods.py
