[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "svg2gcode"
authors = [{name = "Johannes Noordanus", email = "mailjohannes.mailnoordanus@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

keywords = ["scalable vector graphics", "svg", "image", "laser cutter", "laser engraving"]
dependencies = [
    "numpy >= 1.24.3",
    "Pillow >= 9.5.0",
    "image2gcode >= 2.9.6",
]
requires-python = ">=3.7"

[project.scripts]
svg2gcode = "svg2gcode.__main__:main"

[project.urls]
Home = "https://github.com/johannesnoordanus/svg2gcode"

